# argus

./: .readthedocs.yaml  Dockerfile  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
argus/: __init__.py  build_model.py  loss.py  model.py  optimizer.py  types.py  utils.py
argus/callbacks/: __init__.py  callback.py  checkpoints.py  early_stopping.py  logging.py  lr_schedulers.py
argus/engine/: __init__.py  engine.py
argus/metrics/: __init__.py  categorical_accuracy.py  loss.py  metric.py
argus/model/: __init__.py  build.py  load.py  model.py
docs/: requirements.txt
docs/source/: callbacks.rst  conf.py  examples.rst  guides.rst  index.rst  metrics.rst  model.rst  quickstart.rst  utils.rst
docs/source/api_reference/: engine.rst  index.rst  utils.rst
docs/source/api_reference/callbacks/: base_callback.rst  logging.rst  lr_schedulers.rst
docs/source/callbacks/: checkpoints.rst  early_stopping.rst  index.rst  lr_schedulers.rst
docs/source/engine/: index.rst
docs/source/metrics/: index.rst
docs/source/modules/: index.rst  metrics.rst  model.rst  utils.rst
docs/source/modules/callbacks/: index.rst  lr_schedulers.rst
examples/: README.md  build_models.ipynb  cifar_advanced.py  cifar_simple.py  custom_build_methods.py  custom_events.py  load_model.py  mnist.py  mnist_vae.py  quickstart.ipynb  requirements.txt  sequential_lr_scheduler.py
tests/: conftest.py  requirements.txt  test_loss.py  test_optimizer.py  test_pipeline.py  test_utils.py
tests/callbacks/: test_callback.py  test_checkpoints.py  test_early_stopping.py  test_logging.py  test_lr_schedulers.py
tests/engine/: test_engine.py
tests/metrics/: test_categorical_accuracy.py  test_loss.py  test_metric.py
tests/model/: test_build.py  test_custom_build_methods.py  test_load.py  test_model.py
