[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-argus"
description = "Argus is a lightweight library for training neural networks in PyTorch."
authors = [
    { name = "Ruslan Baikulov", email = "ruslan1123@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["torch>=2.0.0"]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "mypy==1.8.0",
    "ruff==0.1.14",
]
docs = [
    "sphinx==7.2.6",
    "pydata-sphinx-theme==0.15.2",
]
examples = [
    "torchvision==0.16.2",
    "notebook==7.0.7",
    "timm==0.9.12",
]

[project.urls]
Repository = "https://github.com/lRomul/argus"
Documentation = "https://pytorch-argus.readthedocs.io/"

[tool.setuptools.dynamic]
version = { attr = "argus.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["argus"]

[tool.ruff]
line-length = 89
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = 6.0
addopts = "--cov=argus"
testpaths = ["tests"]
