[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-argus"
description = "Argus is a lightweight library for training neural networks in PyTorch."
authors = [
    { name = "Ruslan Baikulov", email = "ruslan1123@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["torch>=2.0.0"]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "ruff==0.4.1",
]
docs = [
    "sphinx==7.3.7",
    "pydata-sphinx-theme==0.15.2",
]
examples = [
    "torchvision==0.18.0",
    "notebook==7.1.3",
    "timm==0.9.16",
]

[project.urls]
Repository = "https://github.com/lRomul/argus"
Documentation = "https://pytorch-argus.readthedocs.io/"

[tool.setuptools.dynamic]
version = { attr = "argus.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["argus*"]

[tool.ruff]
line-length = 89

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = 6.0
addopts = "--cov=argus"
testpaths = ["tests"]
